--- a/package.json
+++ b/package.json
@@ -15,9 +15,19 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.34",
+    "@fortawesome/free-brands-svg-icons": "^5.15.2",
+    "@fortawesome/free-regular-svg-icons": "^5.15.2",
+    "@fortawesome/free-solid-svg-icons": "^5.15.2",
+    "@fortawesome/react-fontawesome": "^0.1.14",
+    "bootstrap": "^4.6.0",
     "gatsby": "^2.32.3",
+    "gatsby-plugin-sharp": "^2.14.1",
     "gatsby-source-wordpress": "^4.0.1",
+    "gatsby-transformer-sharp": "^2.12.0",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "react-helmet": "^6.1.0",
+    "sharp": "^0.27.1"
   }
 }
