--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@fortawesome/react-fontawesome": "^0.1.14",
     "bootstrap": "^4.6.0",
     "gatsby": "^2.32.3",
+    "gatsby-plugin-fontawesome-css": "^1.0.0",
+    "gatsby-plugin-react-helmet": "^3.10.0",
     "gatsby-plugin-sharp": "^2.14.1",
     "gatsby-source-wordpress": "^4.0.1",
     "gatsby-transformer-sharp": "^2.12.0",
